can add menu items

--- a/TwinStarLevelEditor/Base.lproj/Main.storyboard
+++ b/TwinStarLevelEditor/Base.lproj/Main.storyboard
@@ -138,6 +138,10 @@
                                     </items>
                                 </menu>
                             </menuItem>
+                            <menuItem title="Sections" id="vve-aw-zae">
+                                <modifierMask key="keyEquivalentModifierMask"/>
+                                <menu key="submenu" title="Sections" id="gE4-Bq-dQG"/>
+                            </menuItem>
                         </items>
                     </menu>
                     <connections>
